# unity-realtime-npc

./: .env.example  Dockerfile  docker-compose.yml  nginx.conf  pg_servers.json  prometheus.yml  pyproject.toml
app/: README.md  __init__.py  agent.py  server.py
app/rag/: ParagraphSplitter.py  __init__.py  rag_tool.py  rag_utils.py
app/rag_docs/: casa_de_los_balcones.txt
app/static/: app.js  config.json  index.html  viewer.html  viewer.js
certs/: LOCAL_CERTS.MD
client/: README.md  RealtimeUnityClient.cs
grafana/provisioning/alerting/: contact-points.yaml  policies.yaml  rules.yaml
grafana/provisioning/dashboards/: alert-overview.json  dashboards.yaml  overview.json  phoenix.json  prometheus-health.json
grafana/provisioning/datasources/: prometheus.yaml
